--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "jwt-decode": "^3.1.2",
         "leaflet": "^1.9.4",
         "lodash.debounce": "^4.0.8",
+        "maplibre-gl": "^3.2.1",
         "ol": "^7.4.0",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
@@ -25,7 +26,8 @@
         "turf": "^3.0.14",
         "vue": "^3.2.41",
         "vue-multiselect": "^2.1.7",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "vue2-google-maps": "^0.10.7"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
