--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@maptiler/sdk": "^1.1.2",
         "atob": "^2.1.2",
         "axios": "^1.4.0",
         "base-64": "^1.0.0",
@@ -18,13 +19,13 @@
         "jwt-decode": "^3.1.2",
         "leaflet": "^1.9.4",
         "lodash.debounce": "^4.0.8",
-        "maplibre-gl": "^3.2.1",
         "ol": "^7.4.0",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
         "primevue": "3.28.0",
         "turf": "^3.0.14",
         "vue": "^3.2.41",
+        "vue-maplibre-gl": "^2.1.0",
         "vue-multiselect": "^2.1.7",
         "vue-router": "^4.1.5",
         "vue2-google-maps": "^0.10.7"
@@ -36,7 +37,8 @@
         "eslint": "^8.22.0",
         "eslint-plugin-vue": "^9.3.0",
         "prettier": "^2.7.1",
-        "sass": "^1.55.0",
+        "sass": "^1.64.1",
+        "sass-loader": "^13.3.2",
         "vite": "^4.2.1"
     }
 }
